--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     <div class="col-md-12"> 
                             <div class="contact-area">
                                 <ul>
-                                    <li><i class="fa fa-phone-square"></i>812-123-456</li>
-                                    <li><i class="fa fa-envelope-o"></i>info@Delight.com</li>
+                                    <li><i class="fa fa-phone-square"></i>wanggong192</li>
+                                    <li><i class="fa fa-envelope-o"></i>chenmengmeng.com</li>
                                 </ul>
                             </div> 
                     </div> 
